<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">WordPress</string>
    <string name="xmlrpc_missing_method_error">Couldn\'t connect. Required XML-RPC methods are missing on the server.</string>
    <string name="xmlrpc_post_blocked_error">Couldn\'t connect. Your host is blocking POST requests, and the app needs
        that in order to communicate with your site. Contact your host to solve this problem.</string>
    <string name="xmlrpc_endpoint_forbidden_error">Couldn\'t connect. We received a 403 error when trying to access your
        site XMLRPC endpoint. The app needs that in order to communicate with your site. Contact your host to solve
        this problem.</string>
    <string name="no_network_title">No network available</string>
    <string name="no_network_message">There is no network available</string>
    <string name="sign_out_wpcom_confirm_with_changes">You have changes to posts that haven’t been uploaded to your site. Logging out now will delete those changes from your device. Log out anyway?</string>
    <string name="sign_out_wpcom_confirm_with_no_changes">Log out of WordPress?</string>
    <string name="select_categories">Select categories</string>
    <string name="tags_separate_with_commas">Separate tags with commas</string>
    <string name="post_content">Content (tap to add text and media)</string>
    <string name="max_thumbnail_px_size">Maximum Image Size</string>
    <string name="image_quality">Image Quality</string>
    <string name="max_video_resolution">Maximum Video Size</string>
    <string name="video_quality">Video Quality</string>
    <string name="password">Password</string>
    <string name="anonymous">Anonymous</string>
    <string name="release_notes_screen_title">Release notes</string>
    <string name="license_screen_title">License</string>
    <string name="help_screen_title">Help and Support</string>
    <string name="notif_settings_screen_title">Notification settings</string>
    <string name="my_site_section_screen_title">My site</string>
    <string name="me_section_screen_title">Me</string>
    <string name="reader_screen_title">Reader</string>
    <string name="notifications_screen_title">Notifications</string>
    <string name="publicize_buttons_screen_title">Sharing buttons</string>
    <string name="media_settings_screen_title">File details</string>
    <string name="person_detail_screen_title">Person detail</string>
    <string name="login_epilogue_screen_title">Logged in as</string>
    <string name="login_prologue_screen_title">Login</string>
    <string name="signup_epilogue_screen_title">New account</string>
    <string name="share_intent_screen_title">Pick site</string>
    <string name="edit_photo_screen_title">Edit Photo</string>
    <string name="notif_detail_screen_title">Notification detail %s</string>
    <string name="wordpress" translatable="false">WordPress</string>
    <string name="posts">Posts</string>
    <string name="sites">Sites</string>
    <string name="media">Media</string>
    <string name="video">Video</string>
    <string name="themes">Themes</string>
    <string name="about_the_app">About the app</string>
    <string name="username">Username</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="keep_editing">Keep editing</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="removed">Removed</string>
    <string name="search">Search</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect all</string>
    <string name="sure_to_remove_account">Remove this site from the app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error">Error</string>
    <string name="connection_error">Connection error</string>
    <string name="connection_to_server_lost">The connection to the server was lost</string>
    <string name="category_refresh_error">Category refresh error</string>
    <string name="incorrect_credentials">Incorrect username or password.</string>
    <string name="cancel_edit">Cancel edit</string>
    <string name="gallery_error">The media item couldn\'t be retrieved</string>
    <string name="refresh">Refresh</string>
    <string name="report_bug">Report bug</string>
    <string name="blog_not_found">An error occurred when accessing this blog</string>
    <string name="post_not_found">An error occurred when loading the post. Refresh your posts and try again.</string>
    <string name="sign_in">Log in</string>
    <string name="signing_out">Logging out…</string>
    <string name="sign_in_wpcom">Log in to WordPress.com</string>
    <string name="learn_more">Learn more</string>
    <string name="uploading_post">Uploading \"%s\"</string>
    <string name="language">Language</string>
    <string name="interface_language">Interface Language</string>
    <string name="signout">Log out</string>
    <string name="undo">Undo</string>
    <string name="never">Never</string>
    <string name="unknown">Unknown</string>
    <string name="off">Off</string>
    <string name="could_not_load_page">Could not load page</string>
    <string name="send">Send</string>
    <string name="swipe_for_more">Swipe for more</string>
    <string name="confirm">Confirm</string>
    <string name="cant_open_url">Unable to open the link</string>
    <string name="retry">Retry</string>
    <string name="invalid_ip_or_range">Invalid IP or IP range</string>
    <string name="copy">Copy</string>
    <string name="error_please_choose_browser">Error opening the default web browser. Please choose another app:</string>
    <string name="delete_yes">Delete</string>
    <string name="add_count">Add %d</string>
    <string name="preview_count">Preview %d</string>
    <string name="write_post">Write Post</string>
    <string name="dismiss">dismiss</string>
    <string name="exit">exit</string>
    <string name="ok">OK</string>
    <string name="button_not_now">Not now</string>
    <string name="latitude_longitude">%1$f, %2$f</string>
    <string name="author_name_blog_name">%1$s, %2$s</string>
    <string name="at_username">\@%s</string>
    <string name="cab_selected">%d selected</string>
    <string name="media_all">All</string>
    <string name="media_images">Images</string>
    <string name="media_documents">Documents</string>
    <string name="media_videos">Videos</string>
    <string name="media_audio">Audio</string>
    <string name="media_gallery_column_count_single">1 column</string>
    <string name="media_gallery_column_count_multi">%d columns</string>
    <string name="media_gallery_type_thumbnail_grid">Thumbnail grid</string>
    <string name="media_gallery_type_squares">Squares</string>
    <string name="media_gallery_type_tiled">Tiled</string>
    <string name="media_gallery_type_circles">Circles</string>
    <string name="media_gallery_type_slideshow">Slideshow</string>
    <string name="media_insert_title">Add multiple photos</string>
    <string name="media_insert_individually">Add individually</string>
    <string name="media_insert_as_gallery">Add as gallery</string>
    <string name="media_downloading">Saving media to this device</string>
    <string name="wp_media_title">WordPress media</string>
    <string name="pick_photo">Select photo</string>
    <string name="pick_video">Select video</string>
    <string name="capture_or_pick_photo">Capture or select photo</string>
    <string name="reader_toast_err_get_post">Unable to retrieve this post</string>
    <string name="media_error_no_permission">You don\'t have permission to view the media library</string>
    <string name="media_error_no_permission_upload">You don\'t have permission to upload media to the site</string>
    <string name="media_error_http_too_large_photo_upload">Image too large to upload. Try changing Optimize Images in your app\'s settings</string>
    <string name="media_error_http_too_large_video_upload">Video too large to upload</string>
    <string name="media_error_exceeds_php_filesize">File exceeds the maximum upload size for this site</string>
    <string name="media_error_exceeds_memory_limit">File too large to be uploaded on this site</string>
    <string name="media_error_internal_server_error">Upload error. Try changing Optimize Images in your app\'s settings</string>
    <string name="media_error_timeout">Server took too long to respond</string>
    <string name="share_media_permission_required">Permissions required in order to share images or videos</string>
    <string name="media_fetching">Fetching media…</string>
    <string name="media_upload_error">Media upload error occurred</string>
    <string name="media_generic_error">Media error occurred</string>
    <string name="media_space_used">%1$s used</string>
    <string name="media_upload_state_queued">Queued</string>
    <string name="media_upload_state_uploading">Uploading</string>
    <string name="media_upload_state_deleting">Deleting</string>
    <string name="media_upload_state_deleted">Deleted</string>
    <string name="media_upload_state_failed">Upload Failed</string>
    <string name="media_upload_state_uploaded">Uploaded</string>
    <string name="media_encoder_quality_80">Low</string>
    <string name="media_encoder_quality_85">Medium</string>
    <string name="media_encoder_quality_90">High</string>
    <string name="media_encoder_quality_95">Very High</string>
    <string name="media_encoder_quality_100">Maximum</string>
    <string name="media_edit_title_text">Title</string>
    <string name="media_edit_caption_text">Caption</string>
    <string name="media_edit_alttext_text">Alt text</string>
    <string name="media_edit_description_text">Description</string>
    <string name="media_edit_link_text">Link to</string>
    <string name="media_edit_link_hint">Open link in a new window/tab</string>
    <string name="media_edit_failure">Failed to update</string>
    <string name="media_edit_file_details_card_caption">File Details</string>
    <string name="media_edit_customize_card_caption">Customize</string>
    <string name="media_edit_url_caption">URL</string>
    <string name="media_edit_filename_caption">File Name</string>
    <string name="media_edit_filetype_caption">File Type</string>
    <string name="media_edit_image_dimensions_caption">Image Dimensions</string>
    <string name="media_edit_video_dimensions_caption">Video Dimensions</string>
    <string name="media_edit_duration_caption">Duration</string>
    <string name="media_edit_upload_date_caption">Upload Date</string>
    <string name="media_edit_copy_url_toast">URL copied to clipboard</string>
    <string name="fab_content_description_preview">Preview</string>
    <string name="media_title_image_details">Image details</string>
    <string name="media_title_video_details">Video details</string>
    <string name="media_title_audio_details">Audio details</string>
    <string name="media_title_document_details">Document details</string>
    <string name="cannot_delete_multi_media_items">Some media can\'t be deleted at this time. Try again later.</string>
    <string name="cannot_retry_deleted_media_item">Media has been removed. Delete it from this post?</string>
    <string name="button_more" translatable="false">@string/more</string>
    <string name="site_settings_date_format_title">Date Format</string>
    <string name="site_settings_format_hint_custom">Custom format</string>
    <string name="site_settings_format_help">Learn more about date &amp; time formatting</string>
    <string name="current_theme">Current Theme</string>
    <string name="customize">Customize</string>
    <string name="details">Details</string>
    <string name="support">Support</string>
    <string name="active">Active</string>
    <string name="theme_image_desc">theme image</string>
</resources>