<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/theme_browser_cardview_margin_large"
        android:layout_marginTop="@dimen/theme_browser_cardview_margin_large"
        android:layout_marginEnd="@dimen/theme_browser_cardview_margin_large"
        android:layout_marginBottom="@dimen/default_cardview_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/theme_browser_cardview_header_margin"
                android:focusable="true"
                android:orientation="vertical">

                <org.wordpress.android.widgets.WPTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_theme"
                    android:textAllCaps="true"
                    android:textAppearance="?attr/textAppearanceCaption"
                    android:textStyle="bold" />

                <org.wordpress.android.widgets.WPTextView
                    android:id="@+id/header_theme_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_theme"
                    android:textColor="?attr/colorOnSurface"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/theme_browser_separator_thickness"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/customize"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/theme_browser_header_button_height"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/icon_size_075"
                        android:layout_height="@dimen/icon_size_075"
                        android:layout_margin="@dimen/margin_none"
                        android:adjustViewBounds="true"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_customize_white_24dp"
                        android:tint="?attr/colorOnSurface" />

                    <org.wordpress.android.widgets.WPTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/customize"
                        android:textColor="?attr/colorOnSurface" />

                </LinearLayout>

                <View
                    android:layout_width="@dimen/theme_browser_separator_thickness"
                    android:layout_height="match_parent"
                    android:background="@color/divider" />

                <LinearLayout
                    android:id="@+id/details"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/theme_browser_header_button_height"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/icon_size_075"
                        android:layout_height="@dimen/icon_size_075"
                        android:layout_margin="@dimen/margin_none"
                        android:adjustViewBounds="true"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_info_outline_white_24dp"
                        android:tint="?attr/colorOnSurface" />

                    <org.wordpress.android.widgets.WPTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/details"
                        android:textColor="?attr/colorOnSurface" />

                </LinearLayout>

                <View
                    android:layout_width="@dimen/theme_browser_separator_thickness"
                    android:layout_height="match_parent"
                    android:background="@color/divider" />

                <LinearLayout
                    android:id="@+id/support"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/theme_browser_header_button_height"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/icon_size_075"
                        android:layout_height="@dimen/icon_size_075"
                        android:layout_margin="@dimen/margin_none"
                        android:adjustViewBounds="true"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_help_outline_white_24dp"
                        android:tint="?attr/colorOnSurface" />

                    <org.wordpress.android.widgets.WPTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/support"
                        android:textColor="?attr/colorOnSurface" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>
