<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/theme_grid_card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        app:cardElevation="20dp"
        android:id="@+id/theme_grid_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/theme_browser_cardview_margin_large"
        android:layout_marginTop="@dimen/theme_browser_cardview_margin_large"
        android:layout_marginEnd="@dimen/theme_browser_cardview_margin_large">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_cardview_radius">

            <FrameLayout
                android:id="@+id/theme_grid_item_image_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground"
                android:importantForAccessibility="noHideDescendants">

                <ImageView
                    android:id="@+id/theme_grid_item_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/theme_image_desc"
                    tools:src="@drawable/bg_rectangle_neutral_10_themes_100dp" />

            </FrameLayout>

            <RelativeLayout
                android:id="@+id/theme_grid_item_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/theme_grid_item_image_layout"
                android:layout_marginTop="@dimen/default_cardview_radius">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true">

                    <org.wordpress.android.widgets.WPTextView
                        android:id="@+id/theme_grid_item_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/theme_browser_cardview_header_margin"
                        android:textColor="?attr/colorOnSurface"
                        android:textStyle="bold" />

                    <org.wordpress.android.widgets.WPTextView
                        android:id="@+id/theme_grid_item_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/theme_browser_cardview_margin_large"
                        android:textColor="@color/success"
                        android:textStyle="bold" />

                    <org.wordpress.android.widgets.WPTextView
                        android:id="@+id/theme_grid_item_active"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/theme_browser_cardview_margin_large"
                        android:text="@string/active"
                        android:textAllCaps="true"
                        android:textColor="@color/primary_5"
                        android:textSize="@dimen/text_sz_extra_small"
                        android:textStyle="bold"
                        android:visibility="gone" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true">

                    <View
                        android:id="@+id/divider"
                        android:layout_width="@dimen/theme_browser_separator_thickness"
                        android:layout_height="match_parent"
                        android:background="?android:attr/listDivider" />

                    <ImageButton
                        android:id="@+id/theme_grid_item_image_button"
                        android:layout_width="@dimen/theme_browser_more_button_width"
                        android:layout_height="@dimen/theme_browser_more_button_height"
                        android:adjustViewBounds="true"
                        android:alpha="@dimen/material_emphasis_medium"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/button_more"
                        android:padding="@dimen/theme_browser_more_button_padding"
                        android:src="@drawable/ic_ellipsis_white_24dp"
                        android:tint="?attr/colorOnSurface" />

                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>
